Updates
Update version number comment for Docker Hub image rebuild, add more correct way to deal with temporary download dependencies, remove deprecated MaxPermSize.